syntax = "proto3";

option go_package = "github.com/Sirlanri/distiot-user-server/rpcHandler/pb";

package pb;


service allRpcServer {
    rpc GetUidByToken(Tokenmsg) returns (UserIDmsg) {}
    rpc GetdIDByToken (Tokenmsg) returns (DeviceIDsmsg) {}
    rpc GetDataTypeBydID (Didmsg) returns (DataTypemsg) {}
}
    
message Tokenmsg {
    string token = 1;
}
message UserIDmsg {
    int64 userID = 1;
}
message DeviceIDsmsg {
    repeated int64 deviceIDs = 1;
}

message Didmsg {
    int64 id = 1;
}

message DataTypemsg {
    int32 dataType = 1;
}
